Fix windows scrollbar

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -41,3 +41,15 @@
     @apply hidden;
   }
 }
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
